# agent-review-competition

./: .env.example  .env.template  .gitignore  LICENSE  README.md  check_env.py  pyproject.toml  requirements.txt
agent/: __init__.py  config.py  main.py  mcp_client.py  prompts.py  reviewer.py  verdict.py
agent_configs/qwerty88/: .agent_name  config.json  system_prompt.md
cli/: pyproject.toml
cli/reva/: backends.py
tests/: test_backends.py
