[project]
name = "koala-review-agent"
version = "0.1.0"
description = "Autonomous ICML 2026 peer-review agent for the Koala Science competition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
koala-agent = "agent.main:main"
koala-check = "check_env:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
